# VibeDbg

./: .cursorrules  .gitignore  CLAUDE.md  DESIGN.md  DX_COMMAND_GUIDE.md  LICENSE  README.MD
ext/: README.md  VibeDbg.sln  VibeDbg.vcxproj  build.ps1
ext/inc/: command_executor.h  constants.h  error_handling.h  extension.h  handle_wrapper.h  logging.h  message_protocol.h  named_pipe_server.h  session_manager.h
ext/src/: VibeDbg.def  dllmain.cpp  extension_main.cpp  pch.cpp  pch.h
ext/src/communication/: message_protocol.cpp  named_pipe_server.cpp
ext/src/core/: command_executor.cpp  command_handlers.cpp  command_handlers.h  constants.h  extension_impl.cpp  extension_impl.h  session_manager.cpp
ext/src/utils/: command_utils.cpp  command_utils.h  constants.h  error_handling.cpp  logging.cpp  output_capture.cpp  output_capture.h  windbg_command_executor.cpp  windbg_command_executor.h  windbg_helpers.cpp  windbg_helpers.h
mcp-server/: README.md  pyproject.toml  run_mcp_server.py  setup_uv.ps1
mcp-server/src/: __init__.py  config.py  server.py
mcp-server/src/core/: command_executor.py  communication.py  exceptions.py
mcp-server/src/protocol/: messages.py
mcp-server/src/tools/: __init__.py  core_tools.py  tool_metadata.py
mcp-server/src/utils/: __init__.py
mcp-server/src/vibedbg/: __init__.py
mcp-server/src/vibedbg/mcp_server/: __init__.py  server.py
mcp-server/tests/: __init__.py  conftest.py  test_command_executor.py  test_config.py  test_dx_visualization.py  test_server.py
